how coukld I be this stupido ass

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
- 
+EMAILJS_SERVICE_ID=service_447a1g5
+EMAILJS_PUBLIC_KEY=VcYOSdXh0rKq9V2De
+EMAILJS_TEMPLATE_ID_OTP=template_hwmrcrb
+EMAILJS_TEMPLATE_ID_PUSH=template_b1qhyh5
+EMAILJS_PRIVATE_KEY=dGI4ZaEa0vcnt_mFgLS-H
